--- a/kittyCalculator/Base.lproj/Main.storyboard
+++ b/kittyCalculator/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -18,6 +19,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="whitecat" translatesAutoresizingMaskIntoConstraints="NO" id="JmC-gV-UZM">
+                                <rect key="frame" x="185" y="34" width="246" height="178"/>
+                            </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="EJm-p4-NVH">
                                 <rect key="frame" x="90" y="220" width="420" height="336"/>
                                 <subviews>
@@ -223,14 +227,15 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="whitecat" translatesAutoresizingMaskIntoConstraints="NO" id="JmC-gV-UZM">
-                                <rect key="frame" x="185" y="34" width="246" height="178"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="speechBubble" translatesAutoresizingMaskIntoConstraints="NO" id="uxG-ca-FOV">
+                                <rect key="frame" x="368" y="182" width="112" height="103"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="uxG-ca-FOV" secondAttribute="height" multiplier="112:103" id="Won-dr-AUS"/>
+                                    <constraint firstAttribute="width" constant="112" id="tOT-2q-7uW"/>
+                                </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="speechBubble" translatesAutoresizingMaskIntoConstraints="NO" id="uxG-ca-FOV">
-                                <rect key="frame" x="173" y="182" width="112" height="103"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Oops!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfB-yG-Gcb">
-                                <rect key="frame" x="200" y="222" width="62" height="40"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Oops!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfB-yG-Gcb">
+                                <rect key="frame" x="396" y="234" width="57" height="26"/>
                                 <color key="tintColor" red="1" green="0.83508206973011356" blue="0.27950232582449197" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="20"/>
                                 <color key="textColor" red="1" green="0.83508206969999998" blue="0.27950232580000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -239,14 +244,25 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="cfB-yG-Gcb" firstAttribute="leading" secondItem="uxG-ca-FOV" secondAttribute="trailing" constant="-90" id="1BM-Ps-IZF"/>
                             <constraint firstAttribute="leadingMargin" secondItem="EJm-p4-NVH" secondAttribute="leading" constant="-70" id="510-Dg-MXS"/>
+                            <constraint firstItem="cfB-yG-Gcb" firstAttribute="top" secondItem="uxG-ca-FOV" secondAttribute="bottom" constant="-65" id="6Rm-Rn-pZU"/>
                             <constraint firstAttribute="trailingMargin" secondItem="JmC-gV-UZM" secondAttribute="trailing" constant="45" id="83u-Xh-WnJ"/>
+                            <constraint firstItem="cfB-yG-Gcb" firstAttribute="leading" secondItem="uxG-ca-FOV" secondAttribute="trailing" constant="-90" id="Bvr-pb-fSK"/>
+                            <constraint firstItem="uxG-ca-FOV" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="153" id="COx-or-t7X"/>
+                            <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="uxG-ca-FOV" secondAttribute="trailing" constant="295" id="DeK-cu-htM"/>
                             <constraint firstItem="JmC-gV-UZM" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="EIc-KP-LxB"/>
+                            <constraint firstItem="cfB-yG-Gcb" firstAttribute="leading" secondItem="uxG-ca-FOV" secondAttribute="trailing" constant="-84" id="K1t-EV-Fbx"/>
+                            <constraint firstItem="uxG-ca-FOV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="80" id="Kby-y9-xIc"/>
                             <constraint firstItem="ii2-CL-W4O" firstAttribute="top" secondItem="JmC-gV-UZM" secondAttribute="bottom" constant="20" id="Lwr-Jv-MYO"/>
                             <constraint firstItem="EJm-p4-NVH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="200" id="NkY-zx-ggi"/>
+                            <constraint firstItem="cfB-yG-Gcb" firstAttribute="top" secondItem="uxG-ca-FOV" secondAttribute="bottom" constant="-65" id="R2z-sF-uia"/>
+                            <constraint firstItem="cfB-yG-Gcb" firstAttribute="leading" secondItem="ii2-CL-W4O" secondAttribute="trailing" constant="-120" id="SGw-d3-X7a"/>
                             <constraint firstAttribute="trailingMargin" secondItem="EJm-p4-NVH" secondAttribute="trailing" constant="70" id="U2M-65-Inc"/>
+                            <constraint firstItem="uxG-ca-FOV" firstAttribute="top" secondItem="JmC-gV-UZM" secondAttribute="bottom" constant="-30" id="Uda-fa-K8D"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="EJm-p4-NVH" secondAttribute="bottom" id="ZwP-M2-UWM"/>
                             <constraint firstItem="JmC-gV-UZM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="50" id="nYV-s4-ENS"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="uxG-ca-FOV" secondAttribute="trailing" constant="160" id="txe-mO-KuE"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Mathtastic" id="T80-Mp-8MK">
