--- a/kittyCalculator/Base.lproj/Main.storyboard
+++ b/kittyCalculator/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <!--Mathtastic-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="kittyCalculator" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="CalculatorViewController" customModule="kittyCalculator" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -261,9 +261,9 @@
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Mathtastic" id="T80-Mp-8MK">
-                        <barButtonItem key="rightBarButtonItem" title="Options" id="jTZ-8x-2Pt">
+                        <barButtonItem key="leftBarButtonItem" title="Options" id="HwR-AB-2hk">
                             <connections>
-                                <segue destination="2zU-zO-5pY" kind="presentation" id="Qsm-fH-3AM"/>
+                                <segue destination="2zU-zO-5pY" kind="show" id="WtJ-37-t7k"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -275,12 +275,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1683" y="168"/>
+            <point key="canvasLocation" x="1863" y="228"/>
         </scene>
         <!--Options-->
         <scene sceneID="Kit-EV-wgh">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="kde-Cy-myt" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="Dlg-IO-b9z" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="pan-f3-Uf1"/>
@@ -290,34 +289,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Choose a different cat" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mYU-Vk-sig">
-                                <rect key="frame" x="144" y="167" width="280" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Adjust meowing" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BeF-qh-Ei2">
-                                <rect key="frame" x="144" y="277" width="280" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Set default tip amount" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CdH-Co-hMv">
-                                <rect key="frame" x="144" y="222" width="280" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Choose a different cat" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mYU-Vk-sig">
+                                <rect key="frame" x="20" y="109" width="560" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="mYU-Vk-sig" firstAttribute="centerX" secondItem="DV0-ZU-zzW" secondAttribute="centerX" id="dhV-ew-ezJ"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Options" id="geI-fs-o8b">
                         <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="rJx-X2-bTd"/>
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="save" id="CCK-ms-X6V"/>
                     </navigationItem>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kde-Cy-myt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3356" y="168"/>
+            <point key="canvasLocation" x="3308" y="228"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gJo-O0-NbG">
@@ -336,11 +327,12 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zZQ-wj-e45" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="871" y="168"/>
+            <point key="canvasLocation" x="851" y="944"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2Wq-ml-xTL">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XGP-dD-Bx1" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2zU-zO-5pY" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="50x-nA-Ang">
@@ -352,13 +344,12 @@
                         <segue destination="Dlg-IO-b9z" kind="relationship" relationship="rootViewController" id="Bkn-1v-pP3"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="XGP-dD-Bx1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2544" y="168"/>
+            <point key="canvasLocation" x="2592" y="228"/>
         </scene>
     </scenes>
     <resources>
         <image name="speechBubble" width="417" height="411"/>
-        <image name="whitecat" width="337" height="300"/>
+        <image name="whitecat" width="328" height="300"/>
     </resources>
 </document>
