--- a/kittyCalculator/Base.lproj/Main.storyboard
+++ b/kittyCalculator/Base.lproj/Main.storyboard
@@ -263,7 +263,7 @@
                     <navigationItem key="navigationItem" title="Mathtastic" id="T80-Mp-8MK">
                         <barButtonItem key="leftBarButtonItem" title="Options" id="HwR-AB-2hk">
                             <connections>
-                                <segue destination="2zU-zO-5pY" kind="show" id="WtJ-37-t7k"/>
+                                <segue destination="2zU-zO-5pY" kind="show" identifier="chooseCat" id="WtJ-37-t7k"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -275,12 +275,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1863" y="228"/>
+            <point key="canvasLocation" x="1779" y="256"/>
         </scene>
-        <!--Options-->
+        <!--Choose a Cat-->
         <scene sceneID="Kit-EV-wgh">
             <objects>
-                <viewController id="Dlg-IO-b9z" sceneMemberID="viewController">
+                <viewController id="Dlg-IO-b9z" customClass="ChooseCatViewController" customModule="kittyCalculator" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="pan-f3-Uf1"/>
                         <viewControllerLayoutGuide type="bottom" id="7te-o2-h06"/>
@@ -289,7 +289,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Choose a different cat" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mYU-Vk-sig">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Choose your new cat." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mYU-Vk-sig">
                                 <rect key="frame" x="20" y="109" width="560" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -301,14 +301,28 @@
                             <constraint firstItem="mYU-Vk-sig" firstAttribute="centerX" secondItem="DV0-ZU-zzW" secondAttribute="centerX" id="dhV-ew-ezJ"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Options" id="geI-fs-o8b">
-                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="rJx-X2-bTd"/>
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="save" id="CCK-ms-X6V"/>
+                    <navigationItem key="navigationItem" title="Choose a Cat" id="geI-fs-o8b">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="5Me-zG-KbZ">
+                            <connections>
+                                <segue destination="LsB-uM-bf8" kind="unwind" unwindAction="unwindToCalculator:" id="cgD-5E-y2s"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="xE1-CY-wiG">
+                            <connections>
+                                <segue destination="LsB-uM-bf8" kind="unwind" unwindAction="unwindToCalculator:" id="84W-4b-qAa"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="cancelCatChoice" destination="5Me-zG-KbZ" id="kAD-vY-gaB"/>
+                        <outlet property="saveCatChoice" destination="xE1-CY-wiG" id="fNk-sL-lMJ"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="showCalculator" id="Mna-Dm-dvR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kde-Cy-myt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="LsB-uM-bf8" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3308" y="228"/>
+            <point key="canvasLocation" x="3308" y="-532"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gJo-O0-NbG">
@@ -327,7 +341,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zZQ-wj-e45" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="851" y="944"/>
+            <point key="canvasLocation" x="923" y="256"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2Wq-ml-xTL">
@@ -345,11 +359,14 @@
                     </connections>
                 </navigationController>
             </objects>
-            <point key="canvasLocation" x="2592" y="228"/>
+            <point key="canvasLocation" x="2588" y="256"/>
         </scene>
     </scenes>
     <resources>
         <image name="speechBubble" width="417" height="411"/>
         <image name="whitecat" width="328" height="300"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Mna-Dm-dvR"/>
+    </inferredMetricsTieBreakers>
 </document>
